prevent scrollbars

--- a/src/components/Comment/styles.module.scss
+++ b/src/components/Comment/styles.module.scss
@@ -27,7 +27,7 @@
 .commentIcon {
     position: absolute;
     right: -10px;
-    top: -2px;
+    top: -4px;
     width: 40px;
     height: 100%;
     border-color: var(--ifm-color-primary);
